c3prj1_deck/grade.txt
Grading at Wed Feb 27 23:48:09 UTC 2019
Compiling deck.c
deck.c: In function ‘shuffle’:
deck.c:29:7: error: unused variable ‘randarry’ [-Werror=unused-variable]
   int randarry;
       ^
cc1: all warnings being treated as errors
Could not compile your deck.c!

Overall Grade: FAILED
